@@ -28,3 +28,4 @@
                    installed before copying the plugin directory inside the B3 extplugins folder (will also make sure that
                    the user didn't delete the extplugins folder manually)
 22/05/2015 - 0.9 - allow the user to terminate B3 application by closing the main window (only windows system)
+                 - simulate application minimize into tray icon (windows only)
